syntax = "proto3";

package proto;
option go_package = "go-grpc-example2/server_streaming/greeting/proto";

message greetingReq{
  string name = 1;
  int32 n = 2;
}

message greetingResp{
  string message = 1;
}

service Greeting{
  rpc GreetingManyTime(greetingReq) returns (stream greetingResp);
}